RESOLVED FIXED292785
WKWebView.loadData should not swap BrowsingContextGroups
https://bugs.webkit.org/show_bug.cgi?id=292785
Summary WKWebView.loadData should not swap BrowsingContextGroups
Alex Christensen
Reported 2025-05-09 10:40:01 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-09 10:40:17 PDT
Alex Christensen
Comment 2 2025-05-09 10:44:09 PDT
EWS
Comment 3 2025-05-10 12:48:43 PDT
Committed 294754@main (19b2526aa86b): <https://commits.webkit.org/294754@main> Reviewed commits have been landed. Closing PR #45175 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.