WKWebView.loadData should not swap BrowsingContextGroups https://bugs.webkit.org/show_bug.cgi?id=292785 rdar://151020111

Reviewed by Ryosuke Niwa.

289035@main introduced a condition to swap BrowsingContextGroups when navigation.isRequestFromClientOrUserInput()
returns true.  This is needed for most forms of requests from client or user input, but not from WKWebView.loadData
or WKWebView.loadHTMLString (which calls WKWebView.loadData).  Otherwise, with site isolation enabled, window.opener
is lost after loading data from the client, which doesn't happen with site isolation off.
isRequestFromClientOrUserInput is used for many other things, so we don't want to change its value, but instead we
introduce a new bit to keep this behavior the same with site isolation on.

This is one of at least two changes needed to get TestWebKitAPI.SOAuthorizationPopUp.InterceptionSucceedCloseByItself
working with site isolation enabled, but it seemed worth making its own PR with its own test.

* Source/WebKit/UIProcess/API/APINavigation.h:
(API::Navigation::markAsFromLoadData):
(API::Navigation::isFromLoadData const):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadData):
(WebKit::WebPageProxy::continueNavigationInNewProcess):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, LoadStringAfterOpen)):

Canonical link: https://commits.webkit.org/294754@main